####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = bookcase-by-author.xsl bookcase-by-title.xsl bookcase-printing.xsl bookcase2html.xsl

####### kdevelop will overwrite this part!!! (end)############

xsldir = $(kde_datadir)/bookcase
xsl_DATA = bookcase-printing.xsl bookcase-by-author.xsl bookcase-by-title.xsl bookcase2html.xsl
SUBDIRS =  entry-templates

KDE_OPTIONS = noautodist
