####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = bookcase-by-author.xsl bookcase-by-title.xsl bookcase-printing.xsl bookcase2html.xsl shadowAlpha.png \
cd-logo.png dvd-logo.png cassette-logo.png record-logo.png vhs-logo.png bookcase-common.xsl mods2bookcase.xsl

####### kdevelop will overwrite this part!!! (end)############

xsldir = $(kde_datadir)/bookcase
xsl_DATA = bookcase-printing.xsl bookcase-by-author.xsl bookcase-by-title.xsl bookcase2html.xsl shadowAlpha.png cassette-logo.png cd-logo.png dvd-logo.png record-logo.png vhs-logo.png bookcase-common.xsl mods2bookcase.xsl
SUBDIRS =  entry-templates

KDE_OPTIONS = noautodist
