####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = \
collections.docbook    faqs.docbook          index.docbook \
configuration.docbook  fields.docbook        menus.docbook \
customization.docbook  fundamentals.docbook  importing-exporting.docbook \
fieldsdialog.png       general-options.png   print-options.png \
entry-editor1.png      entry-editor2.png     entry-editor3.png \
entry-editor4.png      mainwindow.png        template-options.png \
hacking.docbook        bibtex-options.png

####### kdevelop will overwrite this part!!! (end)############

KDE_LANG = en
KDE_DOCS = bookcase
