####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = \
configuration.docbook \
details.docbook \
faqs.docbook \
fundamentals.docbook \
hacking.docbook \
importing-exporting.docbook \
index.docbook \
menus.docbook \
bibtex-options.png \
entry-editor1.png \
entry-editor2.png \
entry-editor3.png \
entry-editor4.png \
fields-dialog.png \
general-options.png \
main-window.png \
print-options.png \
template-options.png \
filter-dialog.png \
csv-dialog.png \
fetch-dialog.png \
export-options.png \
export-html.png \
export-csv.png


####### kdevelop will overwrite this part!!! (end)############

KDE_LANG = en
KDE_DOCS = bookcase

CLEANFILES = *~
