####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libcollections.a

INCLUDES = $(all_includes)

libcollections_a_METASOURCES = AUTO

libcollections_a_SOURCES = bibtexcollection.cpp musiccollection.cpp videocollection.cpp bookcollection.cpp 


EXTRA_DIST = bookcollection.cpp bookcollection.h videocollection.cpp videocollection.h musiccollection.cpp musiccollection.h bibtexcollection.cpp bibtexcollection.h bibtexattribute.h 

####### kdevelop will overwrite this part!!! (end)############

KDE_OPTIONS = noautodist
