####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libcollections.a

AM_CPPFLAGS = $(all_includes)

libcollections_a_METASOURCES = AUTO

libcollections_a_SOURCES = winecollection.cpp stampcollection.cpp \
	comicbookcollection.cpp cardcollection.cpp coincollection.cpp \
	bibtexcollection.cpp musiccollection.cpp videocollection.cpp \
	bookcollection.cpp gamecollection.cpp filecatalog.cpp \
	boardgamecollection.cpp

####### kdevelop will overwrite this part!!! (end)############

KDE_OPTIONS = noautodist

CLEANFILES = *~ *.loT

EXTRA_DIST = \
bookcollection.cpp bookcollection.h \
videocollection.cpp videocollection.h \
musiccollection.cpp musiccollection.h \
bibtexcollection.cpp bibtexcollection.h \
coincollection.cpp coincollection.h \
cardcollection.cpp cardcollection.h \
comicbookcollection.cpp comicbookcollection.h \
stampcollection.cpp stampcollection.h \
winecollection.cpp winecollection.h \
gamecollection.h gamecollection.cpp \
filecatalog.h filecatalog.cpp \
boardgamecollection.h boardgamecollection.cpp
